# capybara_toolkit

./: README.md  capybara_library.cmake
examples/: CMakeLists.txt  example2.cpp  main.cpp
include/: capybara.h  capybara.hpp  capyrobot_constraint_manager.hpp  capytypes.h  checkers.h  dqcapybara.hpp
include/capybara/: capynum.h  capynum.hpp  capytypes.hpp  checkers.h  checkers.hpp  constraints_manager.hpp  conversions.hpp  cronos.hpp  data_logger.hpp  motions.hpp  numerical.hpp  numpy.hpp  utils.hpp  vfi_manager.hpp
include/capybara/dqrobotics/: custom_controllers.hpp  rigid_motions.hpp
include/capybara/experimental/: robot_constraint_manager.hpp  robot_constraints_manager.hpp  vfi_framework.hpp  vfi_manager.hpp
include/dqcapybara/: custom_controllers.hpp  motions.hpp
src/: capynum.cpp  checkers.cpp  constraints_manager.cpp  conversions.cpp  cronos.cpp  custom_controllers.cpp  data_logger.cpp  motions.cpp  numerical.cpp  numpy.cpp  rigid_motions.cpp  robot_constraints_manager.cpp  utils.cpp  vfi_framework.cpp  vfi_manager.cpp
